# PatchMatchStereo_linux

./: .gitignore  CMakeLists.txt  LICENSE  README.md
PatchMatchStereo/: PatchMatchStereo.cpp  cost_computor.hpp  main.cpp  pms_propagation.cpp
PatchMatchStereo_14/: PatchMatchStereo.cpp  main.cpp  pms_types.h  stdafx.h
PatchMatchStereo_CUDA/: CMakeLists.txt  PatchMatch.cu  main.cu
